feat: Add ResponseEntity at appropriate locations in the code base